[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
ash-window = "0.12.0"
raw-window-handle = "0.5.2"

[dev-dependencies]
winit = { version = "0.29.10", features=["rwh_05"] }

[[test]]
name = "test"
path = "tests/test.rs"
harness = false

[[example]]
name = "example"
path = "examples/example.rs"

