[package]
name = "renderer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25"
image = "0.23"
ash = "0.33"
ash-window = "0.7"
num = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.23.1"
cocoa = "0.18.4"
objc  = "0.2.5"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.5", features = ["windef", "libloaderapi"] }